--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -7,7 +7,7 @@ security:
     role_hierarchy:
         ROLE_SUPER_ADMIN: ROLE_ADMIN
         ROLE_ADMIN: [ ROLE_EDIT, ROLE_DELETE, ROLE_USER ]
-        ROLE_USER: [ ROLE_CREATE, ROLE_SHOW, ROLE_LIST ]
+        ROLE_USER: [ ROLE_NEW, ROLE_SHOW, ROLE_LIST ]
 
     providers:
         fos_userbundle:
@@ -21,7 +21,6 @@ security:
                 csrf_token_generator: security.csrf.token_manager
                 # if you are using Symfony < 2.8, use the following config instead:
                 # csrf_provider: form.csrf_provider
-
             logout:       true
             anonymous:    true
 
