Added SpellLevelType OK

--- a/src/CharacterBundle/Resources/config/form_services.yml
+++ b/src/CharacterBundle/Resources/config/form_services.yml
@@ -20,3 +20,9 @@ services:
             - '%spell_types%'
         tags:
             - { name: form.type }
+    character.spell.level:
+        class: CharacterBundle\Form\Type\SpellLevelSelectType
+        arguments:
+            - '%spell_levels%'
+        tags:
+            - { name: form.type }
