--- a/src/CharacterBundle/Resources/config/doctrine/Skill.orm.yml
+++ b/src/CharacterBundle/Resources/config/doctrine/Skill.orm.yml
@@ -23,10 +23,10 @@ CharacterBundle\Entity\Skill:
             type: string
             length: 255
     manyToOne:
-        class:
+        job:
             targetEntity: CharacterBundle\Entity\Job
             inversedBy: skills
             joinColumn:
-                name: class_id
+                name: job_id
                 referencedColumnName: id
     lifecycleCallbacks: {  }
