--- a/src/CharacterBundle/Resources/config/doctrine/Skill.orm.yml
+++ b/src/CharacterBundle/Resources/config/doctrine/Skill.orm.yml
@@ -29,4 +29,5 @@ CharacterBundle\Entity\Skill:
             joinColumn:
                 name: job_id
                 referencedColumnName: id
+                nullable: false
     lifecycleCallbacks: {  }
