Modifier and BonusModifier in admin ok

--- a/app/config/admin.yml
+++ b/app/config/admin.yml
@@ -97,14 +97,24 @@ easy_admin:
                 fields:
                     - { property: 'feature', label: 'admin.spe.feature' }
                     - { property: 'priceModifier', label: 'admin.spe.price_modifier' }
-                    - { property: 'bonusModifiers', label: 'admin.spe.bonus_modifiers' }
+            form:
+                fields:
+                    - { property: 'feature', label: 'admin.spe.feature' }
+                    - { property: 'priceModifier', label: 'admin.spe.price_modifier', type: 'ItemBundle\Form\Type\ModifierType' }
+                    - { property: 'bonusModifiers', label: 'admin.spe.bonus_modifiers', type: 'collection', type_options: { entry_type: 'ItemBundle\Form\Type\BonusModifierType' } }
+                    - { property: 'description', label: 'admin.item.description' }
         SpeItem:
             class: ItemBundle\Entity\SpeItem
             list:
                 fields:
                     - { property: 'feature', label: 'admin.spe.feature' }
                     - { property: 'priceModifier', label: 'admin.spe.price_modifier' }
-                    - { property: 'bonusModifiers', label: 'admin.spe.bonus_modifiers' }
+            form:
+                fields:
+                    - { property: 'feature', label: 'admin.spe.feature' }
+                    - { property: 'priceModifier', label: 'admin.spe.price_modifier', type: 'ItemBundle\Form\Type\ModifierType' }
+                    - { property: 'bonusModifiers', label: 'admin.spe.bonus_modifiers', type: 'collection', type_options: { entry_type: 'ItemBundle\Form\Type\BonusModifierType' } }
+                    - { property: 'description', label: 'admin.item.description' }
         Herb:
             class: ItemBundle\Entity\Herb
             list:
