--- a/src/CharacterBundle/Resources/config/doctrine/Skill.orm.yml
+++ b/src/CharacterBundle/Resources/config/doctrine/Skill.orm.yml
@@ -13,8 +13,9 @@ CharacterBundle\Entity\Skill:
             type: string
             length: 255
         effect:
-            type: string
-            length: 255
+            type: text
+        description:
+            type: text
         usedStats:
             type: string
             length: 255
