Added description on skill in admin

--- a/app/config/admin.yml
+++ b/app/config/admin.yml
@@ -266,5 +266,6 @@ easy_admin:
                     - { property: 'usedStats', label: 'admin.skill.used_stats' }
                     - { property: 'target', label: 'admin.skill.target' }
                     - { property: 'effect', label: 'admin.skill.effect' }
+                    - { property: 'description', label: 'admin.skill.description' }
                     - { property: 'job', label: 'admin.skill.job', type: 'entity', type_options: { class: 'CharacterBundle\Entity\Job', 'choice_label': 'name' }}
 
