--- a/src/CharacterBundle/Resources/config/doctrine/Skill.orm.yml
+++ b/src/CharacterBundle/Resources/config/doctrine/Skill.orm.yml
@@ -1,6 +1,13 @@
 CharacterBundle\Entity\Skill:
     type: entity
     table: null
+    inheritanceType: SINGLE_TABLE
+    discriminatorColumn:
+        name: discr
+        type: string
+    discriminatorMap:
+        passive: CharacterBundle\Entity\PassiveSkill
+        active: CharacterBundle\Entity\ActiveSkill
     repositoryClass: CharacterBundle\Repository\SkillRepository
     id:
         id:
@@ -18,15 +25,6 @@ CharacterBundle\Entity\Skill:
             type: text
         usableCircumstances:
             type: text
-            nullable: true
-        usedStats:
-            type: string
-            length: 255
-            column: used_stats
-            nullable: true
-        target:
-            type: string
-            length: 255
             nullable: true
     manyToOne:
         job:
