--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -10,6 +10,7 @@ imports:
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
     locale: fr
+    app.path.job_images: /uploads/images/job
 
 framework:
     #esi:             ~
@@ -87,3 +88,10 @@ fos_user:
     db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
     firewall_name: main
     user_class: UserBundle\Entity\User
+
+vich_uploader:
+    db_driver: orm
+    mappings:
+        job_images:
+            uri_prefix:         %app.path.job_images%
+            upload_destination: %kernel.root_dir%/../web/uploads/images/job
