--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
         "egeloen/ckeditor-bundle": "^4.0",
         "friendsofsymfony/user-bundle": "dev-master",
         "symfony/property-access": "^3.0",
-        "vich/uploader-bundle": "@dev"
+        "vich/uploader-bundle": "@dev",
+        "stof/doctrine-extensions-bundle": "^1.2"
     },
     "require-dev": {
         "symfony/phpunit-bridge": "^2.7"
