--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -75,9 +75,12 @@ doctrine:
         auto_generate_proxy_classes: "%kernel.debug%"
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
-        metadata_cache_driver: array
-        result_cache_driver: array
-        query_cache_driver: array
+        metadata_cache_driver:
+            type: memcached
+            host: localhost
+            port: 11211
+            instance_class: Memcached
+
 
 # Swiftmailer Configuration
 swiftmailer:
