--- a/composer.json
+++ b/composer.json
@@ -36,8 +36,7 @@
         "friendsofsymfony/user-bundle": "dev-master",
         "symfony/property-access": "^3.0",
         "vich/uploader-bundle": "@dev",
-        "stof/doctrine-extensions-bundle": "^1.2",
-        "ext-memcached": "*"
+        "stof/doctrine-extensions-bundle": "^1.2"
     },
     "require-dev": {
         "symfony/phpunit-bridge": "^2.7"
