--- a/src/UserBundle/Resources/config/services.yml
+++ b/src/UserBundle/Resources/config/services.yml
@@ -1,4 +1,6 @@
 services:
-#    user.example:
-#        class: UserBundle\Example
-#        arguments: ["@service_id", "plain_value", %parameter%]
+    registration.listener:
+        class: UserBundle\EventListener\RegistrationListener
+        arguments: ["@router"]
+        tags:
+            - { name: kernel.event_subscriber }
