--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -3,6 +3,7 @@ imports:
     - { resource: security.yml }
     - { resource: services.yml }
     - { resource: admin.yml }
+    - { resource: fos_user.yml }
     - { resource: "@UserBundle/Resources/config/services.yml" }
     - { resource: "@CharacterBundle/Resources/config/services.yml" }
 
@@ -82,12 +83,9 @@ swiftmailer:
     host:      "%mailer_host%"
     username:  "%mailer_user%"
     password:  "%mailer_password%"
+    port:      "%mailer_port%"
+    encryption: ~
     spool:     { type: memory }
-
-fos_user:
-    db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
-    firewall_name: main
-    user_class: UserBundle\Entity\User
 
 vich_uploader:
     db_driver: orm
