--- a/composer.json
+++ b/composer.json
@@ -84,7 +84,11 @@
                 "database_name": "SYMFONY__DATABASE_NAME",
                 "database_user": "SYMFONY__DATABASE_USER",
                 "database_host": "SYMFONY__DATABASE_HOST",
-                "database_password": "SYMFONY__DATABASE_PASSWORD"
+                "database_password": "SYMFONY__DATABASE_PASSWORD",
+                "mailer_user": "SENDGRID_USERNAME",
+                "mailer_password": "SENDGRID_PASSWORD",
+                "mailer_port": "SENDGRID_PORT",
+                "mailer_host": "SENDGRID_HOST"
             }
         }
     }
