First pages for character creation and character show ok + model for character almost done

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -41,7 +41,7 @@ framework:
 assetic:
     debug:          %kernel.debug%
     use_controller: false
-    bundles:        ['ItemBundle','UserBundle', 'FOSUserBundle']
+    bundles:        ['ItemBundle','UserBundle','FOSUserBundle','CharacterBundle']
     ruby: /usr/local/rvm/rubies/ruby-2.0.0-p481/bin/ruby
     filters:
         cssrewrite: ~
