--- a/app/config/routing_dev.yml
+++ b/app/config/routing_dev.yml
@@ -13,6 +13,6 @@ _errors:
 _main:
     resource: routing.yml
 
-_console:
-    resource: "@CoreSphereConsoleBundle/Resources/config/routing.yml"
-    prefix: /_console
+coresphere_console:
+    resource: .
+    type: extra
