Test on parameter to check if ok

--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -3,10 +3,9 @@ imports:
 
 parameters:
     mailer_port: 25
-    pusher:
-        app_id: 184607
-        key: 9c90616c762de695c865
-        secret: 00119282b40fa79e3626
+    pusher_app_id: 184607
+    pusher_key: 9c90616c762de695c865
+    pusher_secret: 00119282b40fa79e3626
 
 framework:
     router:
