Moved console routing to prod for testing purposes

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -20,3 +20,7 @@ easy_admin_bundle:
 
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
+
+coresphere_console:
+    resource: .
+    type: extra
